--- a/project/templates/add_product.html
+++ b/project/templates/add_product.html
@@ -1,20 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
-<form action="/add_product" method="POST" class="centerform" enctype="multipart/form-data">
+<div>
+    <form action="/add_product" method="POST" class="centerform" enctype="multipart/form-data">
     <br>
     <h1 class="textcenter">Add Product</h1>
     <br>
     <input type="text" name="gmah_id" value="{{ current_user.id }}" hidden>
     <input type="text" name="category" value="{{ current_user.category }}" hidden>
-    <label for="name" ><b>Product name<name></name></label>
+    <label for="name" ><b>Product name</b><name></name></label>
     <input type="name" name="name" id="name" placeholder="Search Anything Here..." class="form-control" style="width:70%">
-    <label for="description" ><b>Description</label>
+    <label for="description" ><b>Description</b></label>
     <input type="name" name="description" id="description" placeholder="Search Anything Here..." class="form-control" style="width:70%">
-    <label for="upload_product" ><b>Product Photo</label>
-    <input type="file" id="file" name="file" class="form-control">
+    <label for="upload_product" ><b>Product Photo</b></label>
+    <input type="file" id="file" name="file" class="form-control" accept="jpeg">
     <input style="width:30%;margin-top:5%" type="submit">
-
-</form>
-
+    </form>
+</div>
 {% endblock %}
