--- a/project/templates/add_product.html
+++ b/project/templates/add_product.html
@@ -13,7 +13,7 @@
     <label for="description" ><b>Description</b></label>
     <input type="name" name="description" id="description" placeholder="Search Anything Here..." class="form-control" style="width:70%">
     <label for="upload_product" ><b>Product Photo</b></label>
-    <input type="file" id="file" name="file" class="form-control" accept="jpeg">
+    <input type="file" id="file" name="file" class="form-control" accept="image/gif, image/jpeg">
     <input style="width:30%;margin-top:5%" type="submit">
     </form>
 </div>
