--- a/project/templates/my_borrows.htm
+++ b/project/templates/my_borrows.htm
@@ -144,7 +144,7 @@
         <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
               <div class="panel-body">
                 {% for borrow in borrows %}
-                    {% if borrow.approved==1 and borrow.is_active==0 and not func3(borrow.start_date) %}
+                    {% if borrow.approved==1 and borrow.is_active==0 and func3(borrow.start_date) %}
                         <div class="col-lg-6" style="border: 1px solid black;">
                              <div style="float:left">
                                {% set imagename = (func2(borrow.product_id)).pic_name %}
