--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -98,7 +98,7 @@
     {% block content %}
             {% endblock %}
  {% block footer %}
-<br><br><br><br>
+<div style="margin-top:15%"><br><br></div>
 <footer>
   <p><br>
   <a href="/about">About</a></p>
