--- a/project/templates/donate_items.html
+++ b/project/templates/donate_items.html
@@ -24,7 +24,7 @@
         <label for="description" ><b>Description</b></label>
         <input type="name" name="description" id="description" placeholder="Search Anything Here..." class="form-control" style="width:70%">
         <label for="upload_product" ><b>Product Photo</b></label>
-        <input style="margin-bottom:5%;margin-top:2%" type="file" id="file" name="file" class="form-control" >
+        <input style="margin-bottom:5%;margin-top:2%" type="file" id="file" name="file" class="form-control" accept="image/gif, image/jpeg">
         <label style="margin-left:25%;display: inline;" for="search">Choose gmah to donate:</label>
         <select id="gmah_id" name="gmah_id" size="1" style="margin-left:10%;display: inline;">
         {% for gmah in gmah_list %}
